# lazymail

./: Cargo.toml  README.md
