[package]
name = "lazymail"
version = "0.0.0"
authors = ["Johnson Hu <huwqchn@gmail.com>"]
description = "Terminal Email Client"
homepage = "https://github.com/huwqchn/lazymail"
repository = "https://github.com/huwqchn/lazymail"
license = "LGPL-3.0"
edition = "2021"
keywords = ["tui-rs", "terminal", "mutt", "email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
